methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:27: error: not found: type c
def Fleur(Color:c){
                ^FlowerPot:30: error: not found: value SetCouleurBrosse
  SetCouleurBrosse(c)
  ^FlowerPot:30: error: not found: value c
  SetCouleurBrosse(c)
                   ^